--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Maks-c.github.io/goit-4team",
+  "homepage": "https://Schamotnic.github.io/goit-team-html-projeckt",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/*.html --public-url /goit-4team/"
